--- a/code_black/sentiment_analysis/templates/home.html
+++ b/code_black/sentiment_analysis/templates/home.html
@@ -1,73 +1,73 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	{% load static %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap-grid.min.css' %}">
-	<link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="{% static 'home.css' %}">
-    <title>Sentiment Analysis</title>
-  </head>
-  <body class="bd-bg">
-	<div class="container-fluid">
-		
-		<!-- Nav Bar -->
-		
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		  <a class="navbar-brand" href="#">SENTIMENT ANALYSIS</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <!-- <div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-			  <li class="nav-item">
-				<a class="nav-link" href="index.html">Upload a Dataset</a>
-			  </li>
-			  <li class="nav-item active">
-				<a class="nav-link" href="#">Analyse some text <span class="sr-only">(current)</span></a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="result.html">Result of Dataset Analysis</a>
-			  </li>
-			</ul>
-		  </div> -->
-		</nav>
-		
-		<div class="sectionLight">
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="jumbotron jumbotron-fluid">
-					  <div class="container">
-						<h1 class="display-4">Enter a piece of text!</h1>
-						<p class="lead">Find out what's written between the lines.</p>
-					  </div>
+	<!doctype html>
+	<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		{% load static %}
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap-grid.min.css' %}">
+		<link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="{% static 'home.css' %}">
+		<title>Sentiment Analysis</title>
+	</head>
+	<body class="bd-bg">
+		<div class="container-fluid">
+			
+			<!-- Nav Bar -->
+			
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">SENTIMENT ANALYSIS</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="{% url 'sentiment_analyser' %}">Home <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
+				</li>
+				<!-- <li class="nav-item">
+					<a class="nav-link" href="result.html">Result of Dataset Analysis</a>
+				</li> -->
+				</ul>
+			</div>
+			</nav>
+			
+			<div class="sectionLight">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="jumbotron jumbotron-fluid">
+						<div class="container">
+							<h1 class="display-4">Enter a piece of text!</h1>
+							<p class="lead">Find out what's written between the lines.</p>
+						</div>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col"></div>
-				<div class="col-sm-12 col-md-6">
-					<form action="{%url 'home' %}" method="post">
-						{% csrf_token %}
-          				<div class="form-group">
-    						<label for="exampleFormControlTextarea1">Write something...</label>
-    						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  name="sentence"></textarea>
-						  </div>
-						  <input type="submit"  class="btn btn-secondary btn-lg" value="Go">
-        			</form>
-					
+				<div class="row">
+					<div class="col"></div>
+					<div class="col-sm-12 col-md-6">
+						<form action="{% url 'sentiment_analyser' %}" method="post">
+							{% csrf_token %}
+							<div class="form-group">
+								<label for="exampleFormControlTextarea1">Write something...</label>
+								<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  name="sentence"></textarea>
+							</div>
+							<input type="submit"  class="btn btn-secondary btn-lg" value="Go">
+						</form>
+						
+					</div>
+					<div class="col"></div>
 				</div>
-				<div class="col"></div>
 			</div>
+			
 		</div>
-		
-    </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap-4.4.1-dist/js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<script src="{% static 'bootstrap-4.4.1-dist/js/bootstrap.min.js' %}"></script>
+	</body>
+	</html>
