--- a/code_black/sentiment_analysis/templates/bulk_review_upload.html
+++ b/code_black/sentiment_analysis/templates/bulk_review_upload.html
@@ -43,7 +43,7 @@
 				<div class="col-sm-12">
 					<div class="jumbotron jumbotron-fluid">
 					  <div class="container">
-						<h1 class="display-4">Upload a Dataset!</h1>
+						<h1 class="display-5">Upload multiple reviews by .csv file</h1>
 <!--						<p class="lead">Total radness since 1987.</p>-->
 					  </div>
 					</div>
