--- a/code_black/sentiment_analysis/templates/result.html
+++ b/code_black/sentiment_analysis/templates/result.html
@@ -1,65 +1,127 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	{% load static %}
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap-grid.min.css' %}">
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap-grid.min.css' %}">
 	<link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="{% static 'result_css.css' %}">
-    <title>Sentiment Analysis</title>
-  </head>
-  <body class="bd-bg">
+	<title>Sentiment Analysis</title>
+</head>
+
+<body class="bd-bg">
 	<div class="container-fluid">
-		
+
 		<!-- Nav Bar -->
-		
+
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		  <a class="navbar-brand" href="#">SENTIMENT ANALYSIS</a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="{% url 'sentiment_analyser' %}">Home <span class="sr-only">(current)</span></a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
-				  </li>
-			  <!-- <li class="nav-item active">
+			<a class="navbar-brand" href="#">SENTIMENT ANALYSIS</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+				aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a class="nav-link" href="{% url 'sentiment_analyser' %}">Home <span
+								class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
+					</li>
+					<!-- <li class="nav-item active">
 				<a class="nav-link" href="#">Result of Dataset Analysis</a>
 			  </li> -->
-			</ul>
-		  </div>
+				</ul>
+			</div>
 		</nav>
-		
+
 		<div class="sectionLight">
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="jumbotron jumbotron-fluid">
-					  <div class="container">
-						<h4 class="display-5">Result of sentiment analyser in the range of 1-5</h4>
-						<h5 class="display-6">Sentence provided: {{sentence}}</h5>
-						<h5 class="display-6"> Overall average rating: {{rating}} </h5>
-						<div class="col-sm-6 col-md-4 img-col">
-							<img class="img-right" alt="Sample Image 1" src="{% static 'graph.png' %}">
+						<div class="container">
+							<h4 class="display-5">Result of sentiment analyser in the range of 1-5</h4>
+							<h5 class="display-6">Sentence provided: {{sentence}}</h5>
+							<h5 class="display-6"> Overall average rating: {{rating}} </h5>
+							<br /><br />
+							<div class="row mx-auto">
+								<div class="col-sm-6 col-md-4 img-col mx-auto">
+									<img class="img-left" alt="Sample Image 1" src="{% static 'graph.png' %}">
+								</div>
+								<div class="col-sm-6 col-md-4 img-col mx-auto">
+									<img class="img-right" alt="Sample Image 2" src="{% static '#.png' %}">
+								</div>
+							</div>
 						</div>
-
-					  </div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				
+
 				<!-- <div class="col-sm-12 col-md-6 right-img-col">
 					<img class="img-right" alt="Sample Image 2" src="Sample_image_2.png">
 				</div> -->
 			</div>
 
+			<div class="container">
+				<!--table-->
+				<table class="table table-striped">
+					<thead class="thead-dark">
+						<tr>
+							<th scope="col">Rating by Customer</th>
+							<th scope="col">Customer Review</th>
+							<th scope="col">ML Model Rating</th>
+							<th scope="col">Avg. Product Rating</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<th scope="row">3</th>
+							<td>Rtx2080 with Intel i9 processor and on top of that 144hz display panel.
+								Only down side with this machine is it's speakers and design. Apart from
+								that, on performance it's a beast. I would totally recommend it if you
+								are not into aesthetics that much.</td>
+							<td>4</td>
+							<td>3.5</td>
+						</tr>
+						<tr>
+							<th scope="row">1</th>
+							<td>This laptop has loud fan noise and gets so hot that you can fry an egg over it.</td>
+							<td>2</td>
+							<td>1.5</td>
+						</tr>
+						<tr>
+							<th scope="row">1</th>
+							<td>This laptop is so good that I would never recommend it to a friend.</td>
+							<td>1</td>
+							<td>1</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			<!-- Paginator -->
+			<div class="container">
+				<nav aria-label="...">
+					<ul class="pagination">
+						<li class="page-item">
+							<span class="page-link">Previous</span>
+						</li>
+						<li class="page-item active"><a class="page-link" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item">
+							<a class="page-link" href="#">Next</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 			<ol>
 				{% for inv_result in results %}
 				<hr>
@@ -68,15 +130,20 @@
 					{{ i }}
 					{% endfor %}
 				</li>
-				
+
 				{% endfor %}
-				</ol>
-			
+			</ol>
+
 		</div>
-		
-    </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap-4.4.1-dist/js/bootstrap.min.js' %}"></script>
-  </body>
+
+	</div>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+		crossorigin="anonymous"></script>
+	<script src="{% static 'bootstrap-4.4.1-dist/js/bootstrap.min.js' %}"></script>
+</body>
+
 </html>
