templates for bulk review flow added

--- a/code_black/sentiment_analysis/templates/bulk_review_upload.html
+++ b/code_black/sentiment_analysis/templates/bulk_review_upload.html
@@ -31,9 +31,9 @@
 			  <li class="nav-item">
 				<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
 			  </li>
-			  <!-- <li class="nav-item">
-				<a class="nav-link" href="result.html">Result of Dataset Analysis</a>
-			  </li> -->
+			  <li class="nav-item">
+                <a class="nav-link" href="{% url 'bulk_result' %}">check bulk result</a>
+            </li>
 			</ul>
 		  </div>
 		</nav>
