--- a/code_black/sentiment_analysis/templates/home.html
+++ b/code_black/sentiment_analysis/templates/home.html
@@ -30,9 +30,9 @@
 				<li class="nav-item">
 				<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
 				</li>
-				<!-- <li class="nav-item">
-					<a class="nav-link" href="result.html">Result of Dataset Analysis</a>
-				</li> -->
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'bulk_result' %}">Check bulk result</a>
+				</li>
 				</ul>
 			</div>
 			</nav>
