--- a/code_black/sentiment_analysis/templates/result.html
+++ b/code_black/sentiment_analysis/templates/result.html
@@ -34,9 +34,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
 					</li>
-					<!-- <li class="nav-item active">
-				<a class="nav-link" href="#">Result of Dataset Analysis</a>
-			  </li> -->
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'bulk_result %}">check bulk result</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
