--- a/code_black/sentiment_analysis/templates/please_wait.html
+++ b/code_black/sentiment_analysis/templates/please_wait.html
@@ -35,7 +35,7 @@
 						<a class="nav-link" href="{% url 'bulk_analyser' %}">Upload multiple reviews</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'bulk_result %}">check bulk result</a>
+						<a class="nav-link" href="{% url 'bulk_result' %}">check bulk result</a>
 					</li>
 				</ul>
 			</div>
