--- a/code_black/sentiment_analysis/templates/upload_successful.html
+++ b/code_black/sentiment_analysis/templates/upload_successful.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap-grid.min.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-4.4.1-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="{% static 'home.css' %}">
+    <link rel="stylesheet" href="{% static 'result_css.css' %}">
     <title>Sentiment Analysis</title>
 </head>
 <body class="bd-bg">
